fix: gap

--- a/src/styles/ftva/_impact-number-cards.scss
+++ b/src/styles/ftva/_impact-number-cards.scss
@@ -10,7 +10,7 @@
         }
     }
     .impact-number-cards-list {
-        gap: 20px 16px;
+        gap: 16px 20px;
     }
 
     @media #{$medium} {
